# hidro-entropia

./: pyproject.toml
src/hidro_entropia/: __init__.py  entropia.py  intervalos_histograma.py  normalizacao.py  probabilidade.py  serie_temporal.py
tests/: conftest.py  test_frequencia.py  test_normalizacao.py  test_probabilidade.py
