[project]
name = "hidro-entropia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "mvcastro", email = "mvcastro1975@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["numpy>=2.4.1", "pandas>=2.3.3"]

[project.scripts]
hidro-entropia = "hidro_entropia:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2"]

[tool.pytest.ini_options]
addopts = "-v -s"
pythonpath = ["src"]
testpaths = ["tests"]
